kub-minikube/keycloak-postgress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      containers:
        - name: keycloak-postgres
          image: postgres:18-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data-volume
              mountPath: /var/lib/postgresql/data
              subPath: postgres-data # This forces K8s to create a subfolder on the host
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: keycloak-postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres # Hostname accessible by other pods
spec:
  selector:
    app: keycloak-postgres
  ports:
    - port: 5432
      targetPort: 5432
